Complete page- transitions-hover- responsiveness

--- a/idex.html
+++ b/idex.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<!-- <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> -->
 <script src="https://kit.fontawesome.com/533679c18d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- navbar section -->
+<!-- navbar section -->
     <nav>
         <div class="left-nav">
             <ul>
@@ -32,17 +31,17 @@
               </div>
         </div>
     </nav>
-      <!-- section one -->
+<!-- section one -->
 <section class="one">
     <div class="container1 ">
         <div class="left">
             <div class="text-box1">
-                <h1 class="title">DAJOS</h1>
+                <h1 class="first-title">DAJOS</h1>
                 <h1 class="sub-title">Samen in ontwikkeling</h1>
                 <p> Begeleiding aan (jong)volwassenen met een diagnose autisme, in de levensfases studie of werk. <a class="more-a" href="">more >></a></p>
             </div>
             <div class="text-box2">
-                <h2 class="title"> Waar kunnnen we jou mee helpen?</h2>
+                <h2 class="sub-title2 sub-title"> Waar kunnnen we jou mee helpen?</h2>
                 <p><i class="fa-solid fa-play"></i>Ik zoek begeleiding met werk</p>
                 <p><i class="fa-solid fa-play"></i>Ik wil graag zelfstandig wonen</p>
                 <p><i class="fa-solid fa-play"></i>Ik heb hulp nodig met mijn studie</p>
@@ -53,68 +52,251 @@
         </div>
     </div>
 </section>
-
-
+<!-- section two -->
 <section class="two">
-    <div class="container2">
-        <h1 class="title title2">Waar wij elkaar ontmoeten</h1>
+    <h1 class="title ">Waar wij elkaar<br> ontmoeten</h1>
         <div class="content reveal">
-            <div class="card card1">
-                <h2 class="card-title">Wonen<span>  zelfstandig</span></h2>
-                <div class="card-image1 card-image"></div>
-                <p class="card-desc">Wij helpen  met autisme om succesvol te studeren en begeleidt hen bij en naar zelfstandig wonen.</p>
-                <hr class="solid hide">
-                <div class="card-p hide">
-                    <i class="fa-solid fa-play"></i><p>Ik zoek begeleiding met werk</p>
+            <div class="card">
+                <div class="card-content">
+                    <h2 class="card-title">Wonen<span><br>zelfstandig</span></h2>
+                    <div class="card-image1-sec2 card-image"></div>
+                    <p class="card-desc">Wij helpen  met autisme om succesvol te studeren en begeleidt hen bij en naar zelfstandig wonen.</p>
                 </div>
-                <div class="card-p hide">
-                    <i class="fa-solid fa-play"></i><p>Ik zoek begeleiding met werk</p>
-                </div>
-            </div>
-            <div class="card card2 ">
-                <h2 class="card-title">Studeren<span> zelfredzaamheid</span></h2>
-                <div class="card-image2 card-image"></div>
-                <p class="card-desc">We helpen vaardigheden te ontwikkelen die nodig zijn voor succesvol studeren en (op termijn) zelfstandig wonen.</p>
-                <hr class=" solid2 hide">
-                <div class="card-p hide">
-                    <i class="fa-solid fa-play"></i><p>Ik doe een MBO opleiding</p>
-                </div>
-                <div class="card-p hide">
-                    <i class="fa-solid fa-play"></i><p>Ik studeer aan een HBO of de universiteit</p>
+                <div class="card-extra hide">
+                    <hr class="solid ">
+                    <div class="card-p ">
+                        <i class="fa-solid fa-play"></i><p>Ik zoek begeleiding met werk</p>
+                    </div>
+                    <div class="card-p">
+                        <i class="fa-solid fa-play"></i><p>Ik zoek begeleiding met werk</p>
+                    </div>
                 </div>
             </div>
-            <div class="card card3">
-                <h2 class="card-title">Werken<span>regie over je leven</span></h2>
-                <div class="card-image3 card-image"></div>
-                <p class="card-desc">Een unieke combinatie van woonbegeleiding, jobcoaching én leefbegeleiding.</p>
-                <hr class="solid hide">
-                <div class="card-p hide">
-                    <i class="fa-solid fa-play"></i><p>Ik wil hulp bij het vinden van een baan</p>
+            <div class="card">
+                <div class="card-content">
+                    <h2 class="card-title">Studeren<span><br>zelfredzaamheid</span></h2>
+                    <div class="card-image2-sec2 card-image"></div>
+                    <p class="card-desc">We helpen vaardigheden te ontwikkelen die nodig zijn voor succesvol studeren en (op termijn) zelfstandig wonen.</p>
                 </div>
-                <div class="card-p hide">
-                    <i class="fa-solid fa-play"></i><p>Ik heb coaching nodig bij mijn huidige baan</p>
+                <div class="card-extra hide">
+                    <hr class="solid">
+                    <div class="card-p ">
+                        <i class="fa-solid fa-play"></i><p>Ik doe een MBO opleiding</p>
+                    </div>
+                    <div class="card-p ">
+                        <i class="fa-solid fa-play"></i><p>Ik studeer aan een HBO of de universiteit</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
+            <div class="card">
+                <div class="card-content">
+                    <h2 class="card-title">Werken<span><br>regie over je leven</span></h2>
+                    <div class="card-image3-sec2 card-image"></div>
+                    <p class="card-desc">Een unieke combinatie van woonbegeleiding, jobcoaching én leefbegeleiding.<br></p>
+                </div>
+                <div class="card-extra hide">
+                    <hr class="solid ">
+                    <div class="card-p ">
+                       <i class="fa-solid fa-play"></i><p>Ik wil hulp bij het vinden van een baan</p>
+                    </div>
+                    <div class="card-p ">
+                        <i class="fa-solid fa-play"></i><p>Ik heb coaching nodig bij mijn huidige baan</p>
+                    </div>
+                </div>
+            </div>
         </div>
 </section>
 <!-- section 3 -->
-<section class="three ">
-        <div class="content-sec3 reveal">
-           <div class="left-sec3">
-           </div>
-           <div class="right-sec3">
-                <p> Dajos is in veel gemeenten door heel Nederland actief. Hier werken we met kleine, zelfstandig werkende teams. Ieder team wordt bijgestaan door een regiomanager en een gedragswetenschapper.<span> In alle gemeentes waar Dajos actief is bieden we Stumass, Capito Wonen en IVA dienstverlening. Het verschilt wel per gemeente of er een locatie is en hoeveel mensen we ambulant kunnen begeleiden. Ons centraal kantoor is gevestigd in Arnhem.</span></p>
-                <div class="button-container">
-                    <a href="" class="button button1"><span>Kies locatie</span><i class="fa-solid fa-play"></i></a>
-                    <a href="" class="button button2"><i class="fa-solid fa-play"></i><span>Kies locatie</span></a>
+<section class="three">
+    <div class="content content3 reveal">
+        <img class="left-sec3" src="./images/building.png" alt="">
+        <div class="right-sec3">
+            <p> Dajos is in veel gemeenten door heel Nederland actief. Hier werken we met kleine, zelfstandig werkende teams. Ieder team wordt bijgestaan door een regiomanager en een gedragswetenschapper. In alle gemeentes waar Dajos actief is bieden we Stumass, Capito Wonen en IVA dienstverlening. Het verschilt wel per gemeente of er een locatie is en hoeveel mensen we ambulant kunnen begeleiden. Ons centraal kantoor is gevestigd in Arnhem.</p>
+            <div class="button-container">
+                <a href="" class="button button1"><span>Kies locatie</span><i class="fa-solid fa-play"></i></a>
+                <a href="" class="button button2"><i class="fa-solid fa-play"></i><span>Bekijk de kaart</span></a>
+            </div>
+        </div>
+        <h2 class="title-sec3">Een plek voor jou</h2>
+    </div>
+</section>
+<!-- section 4 -->
+<section class="four">
+    <h1 class="title reveal"> De verhalen<span><br>die wij vertellen</span></h1>
+    <div class="content content-sec4">
+        <div class="up-sec4 reveal">
+            <img class="left-up-sec4" src="./images/girlsSec4.png" alt="">
+            <div class="right-up-sec4">
+                <span class="date">26 augustus 2020</span>
+                <h1 class="sub-title4">Vriendschap… Hoe doe je dat?</h1>
+                <p class="p-sec4">Vrienden maken (en houden) is voor de één makkelijker dan voor de ander. Madelon vertelt over haar ervaringen met vriendschap.</p>
+                <div class="avatar-container">
+                    <img src="images/madelon.png" alt="">
+                    <a href=""><span class="avatar-name avatar-name1"><span class="fname fname1">Door</span>Madelon</span></a>
                 </div>
             </div>
-            <h2 class="title-sec3">Een plek voor jou</h2>
         </div>
+        <div class="down-sec4">
+            <div class="card card-sec4">
+                <div class="card-image1-sec4 card-image4 reveal appear"></div>
+                <span class="date date2">22 juni 2020</span>
+                <h2>Concentratie van een goudvis</h2>
+                <p class="card-desc">“Autisme is niet makkelijk. Studeren is ook niet makkelijk.Vanuit huis moeten studeren vanwege de coronacrisis wordt ook niet als makkelijk ervaren.</p>
+                <div class="avatar-container">
+                    <img src="images/Ilse.png" alt="">
+                    <a href=""><span class="avatar-name"><span class="fname fname2">Door</span>Ilse</span></a>
+                </div>
+            </div>
+            <div class="card card-sec4">
+                <div class="card-image2-sec4 card-image reveal appear"></div>
+                <span class="date date2">10 juni 2020</span>
+                <h2>Later als ik groot ben</h2>
+                <p class="card-desc">“Later als ik groot ben” is een zin die zelfs bij mij als 42 jaar jonge (oude) vrouw nog wel eens door mijn hoofd schiet, om er dan tot mijn grote schrik achter te komen dat later nu is en ik al groot ben.</p>
+                <div class="avatar-container">
+                    <img src="images/nynke.png" alt="">
+                    <a href=""><span class="avatar-name"><span class="fname">Door</span>Nynke</span></a>
+                </div>
+            </div>
+            <div class="card card-sec4">
+                <div class="card-image3-sec4 card-image reveal appear"></div>
+                <span class="date date2">27 october 2020</span>
+                <h2>De ervaring van Johan in een studentenhuis</h2>
+                <p class="card-desc">In juli 2019 ben ik op zoek naar een relevante baan voor naast mijn deeltijdstudie Toegepaste Psychologie.<br><br> </p>
+                <div class="avatar-container">
+                    <img class="avatar-img" src="images/sanne.png" alt="">
+                    <a href=""><span class="avatar-name"><span class="fname">Door</span>Sanne</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-
+<section class="five">
+    <div class="content content-sec5">
+        <img class="left-sec5 rotate reveal" src="./images/faces.png" alt="">
+        <div class="right-sec5 reveal">
+            <p class="sec5-p" >Wij zien onze medewerkers als de grote kracht achter onze cliënten en organisatie. Wij besteden dan ook veel aandacht aan de deskundigheidsbevordering van medewerkers, omdat wij willen bijdragen aan de ontwikkeling van onze medewerkers.</p>
+            <div class="card-p">
+                <i class="fa-solid fa-play"></i><p>Meer over onze organisatie</p>
+            </div>
+            <div class="card-p">
+                <i class="fa-solid fa-play"></i><p>Naar vacatures</p>
+            </div>
+        </div>
+        <h2 class="reveal">Maak het <span>verschil</span></h2>
+    </div>
+</section>
+<!-- section six -->
+<section class="six">
+    <h1 class="title6 appear reveal">Laatste nieuws</h1>
+    <div class="content content-sec6 ">
+        <div class="left-sec6">
+            <div class="card-sec6 appear reveal">
+                <div class="card-image1-sec6 card-image6"></div>
+                <span class="date date3">3 november 2020</span>
+                <h2>Corona maatregelen </h2>
+            </div>
+            <div class="card-sec6 appear reveal">
+                <div class="card-image2-sec6 card-image6"></div>
+                <span class="date date3">3 oktober 2020</span>
+                <h2>Werken bij Groningen? Maak nu online kennis!</h2>
+            </div>
+            <div class="card-sec6 appear reveal">
+                <div class="card-image3-sec6 card-image6"></div>
+                <span class="date date3">16 augustus 2020</span>
+                <h2>Stagiaire Toegepaste Psychologie geslaagd met onderzoek naar de e-learning over het angstmodel</h2>
+            </div>
+        </div>
+        <div class="right-sec6 appear reveal">
+            <h2>Blijf op de hoogte</h2>
+            <p>Meld je dan aan voor onze nieuwsbrief. Je ontvangt dan ongeveer tien keer per jaar onze nieuwsbrief.</p>
+            <a href="" class="button-sec6"><span>E-mailadres</span><i class="fa-solid fa-play"></i></a>
+        </div>
+    </div>
+    <h1 class="title6 appear reveal">Veelgestelde vragen</h1>
+    <div class="content content-sec6">
+        <div class="links-container appear reveal">
+            <div class="link-title">
+                <i class="fa-solid fa-square"></i><a href=""><p>Financieel</p></a>
+            </div>
+            <div class="links">
+                <a href=""><p class="link">Indicatie</p></a>
+                <a href=""><p class="link">Maatwerk</p></a>
+                <a href=""><p class="link">WMO</p></a>
+                <a href=""><p class="link">Eigen bijdrage</p></a>
+                <a href=""><p class="link">PGB</p></a>
+            </div>
+        </div>
+        <div class="links-container appear reveal">
+            <div class="link-title">
+                <i class="fa-solid fa-square"></i><a href=""><p>Financieel</p></a>
+            </div>
+            <div class="links">
+                <a href=""><p class="link">Indicatie</p></a>
+                <a href=""><p class="link">Maatwerk</p></a>
+                <a href=""><p class="link">WMO</p></a>
+                <a href=""><p class="link">Eigen bijdrage</p></a>
+                <a href=""><p class="link">PGB</p></a>
+            </div>
+        </div>
+        <div class="links-container appear reveal">
+            <div class="link-title">
+                <i class="fa-solid fa-square"></i><a href=""><p>Financieel</p></a>
+            </div>
+            <div class="links">
+                <a href=""><p class="link">Indicatie</p></a>
+                <a href=""><p class="link">Maatwerk</p></a>
+                <a href=""><p class="link">WMO</p></a>
+                <a href=""><p class="link">Eigen bijdrage</p></a>
+                <a href=""><p class="link">PGB</p></a>
+            </div>
+        </div>
+        <div class="links-container appear reveal">
+            <div class="link-title">
+                <i class="fa-solid fa-square"></i><a href=""><p>Financieel</p></a>
+            </div>
+            <div class="links">
+                <a href=""><p class="link">Indicatie</p></a>
+                <a href=""><p class="link">Maatwerk</p></a>
+                <a href=""><p class="link">WMO</p></a>
+                <a href=""><p class="link">Eigen bijdrage</p></a>
+                <a href=""><p class="link">PGB</p></a>
+            </div>
+        </div>
+        <div class="links-container appear reveal">
+            <div class="link-title">
+                <i class="fa-solid fa-square"></i><a href=""><p>Financieel</p></a>
+            </div>
+            <div class="links">
+                <a href=""><p class="link">Indicatie</p></a>
+                <a href=""><p class="link">Maatwerk</p></a>
+                <a href=""><p class="link">WMO</p></a>
+                <a href=""><p class="link">Eigen bijdrage</p></a>
+                <a href=""><p class="link">PGB</p></a>
+            </div>
+        </div>
+    </div>
+    </section>
+<!-- footer section -->
+<section class="footer">
+    <div class="footer-container footer-container1">
+        <a href=""><p>Vacatures</p></a>
+        <a href=""><p>Klachtenregeling</p></a>
+        <a href=""><p>Over ons</p></a>
+    </div>
+</section>
+<section class="footer footer2">
+    <div class="footer-container footer-container2">
+        <div class="footer2-links">
+            <a href=""><p>Privacy</p></a>
+            <a href=""><p>Algemene voorwaarden</p></a>
+            <a href=""><p>Cookies</p></a>
+        </div>.
+        <div class="copyright-link">
+            <i class="fa-regular fa-copyright"></i>
+            <p>2020 Dajos</p>
+        </div>
+    </div>
+</section>
 <script src="script.js"></script>
 </body>
 </html>
